# buildingLighting

./: .gitignore  CMakeLists.txt  Camera.h  FindAssimp.txt  FindGLFW.txt  FindGLM.txt  Shader.h  main.cpp
resources/models/sonic/: Sonic.mtl
resources/shaders/: model.frag  model.vert
resources/shaders/modelLoading/: modelLoading.frag
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
src/building/: Building.cpp  Building.h  WallObject.cpp  WallObject.h
src/building/interiorObjects/: DecorativeObject.cpp  DecorativeObject.h  InteriorObject.cpp  InteriorObject.h  LightSource.cpp  LightSource.h
src/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/menu/: EditMenu.cpp  EditMenu.h  MainMenu.h  Menu.h  ViewMenu.cpp  ViewMenu.h
src/modeling/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
src/scene/: EditScene.cpp  EditScene.h  Scene.cpp  Scene.h  StartScene.cpp  StartScene.h  ViewScene.cpp  ViewScene.h
src/shaders/: ModelShader.cpp  ModelShader.h  Shader.cpp  Shader.h
